--- a/quarto/basics/vectors.qmd
+++ b/quarto/basics/vectors.qmd
@@ -434,7 +434,7 @@ Tuples are fixed-length containers where there is no expectation or enforcement 
 While a vector is formed by placing comma-separated values within a `[]` pair (e.g., `[1,2,3]`), a tuple is formed by placing comma-separated values within a `()` pair.  A tuple of length $1$ uses a convention of a trailing comma to distinguish it from a parenthesized expression (e.g. `(1,)` is a tuple, `(1)` is just the value `1`).
 
 
-Vectors and tuples can appear at the same time: a vector of tuples--each of length $n$--can be used in plotting to specify points.
+Vectors and tuples can appear at the same time: a vector of tuples---each of length $n$---can be used in plotting to specify points.
 
 :::{.callout-note}
 ## Well, actually...
@@ -471,7 +471,7 @@ The values in a named tuple can be accessed using the "dot" notation:
 nt.x1
 ```
 
-Alternatively, the index notation--using a *symbol* for the name--can be used:
+Alternatively, the index notation---using a *symbol* for the name---can be used:
 
 ```{julia}
 nt[:x1]
@@ -608,7 +608,7 @@ There will be an error with `only` should the container not have just one elemen
 
 ### Mutating values
 
-Vectors and matrices can have their elements changed or mutated; tuples can not. The process is similar to assignment--using an equals sign--but the left hand side has indexing notation to reference which values within the container are to be updated.
+Vectors and matrices can have their elements changed or mutated; tuples can not. The process is similar to assignment---using an equals sign---but the left hand side has indexing notation to reference which values within the container are to be updated.
 
 To change the last element of `v` to `0` we have:
 
@@ -653,7 +653,7 @@ Arrays, and hence vectors and matrices have an element type given by `eltype` (t
 eltype(v), eltype(t), eltype(m)
 ```
 
-(The element type of the tuple is `Int64`, but this is only because of this particular tuple. Tuples are typically heterogeneous containers--not homogeneous like vectors--and do not expect to have a common type. The `NTuple` type is for tuples with elements of the same type.)
+(The element type of the tuple is `Int64`, but this is only because of this particular tuple. Tuples are typically heterogeneous containers---not homogeneous like vectors---and do not expect to have a common type. The `NTuple` type is for tuples with elements of the same type.)
 
 ### Modifying the length of a container
 
@@ -665,7 +665,7 @@ Two key methods for queues are `push!` and `pop!`. We `push!` elements onto the 
 push!(v, 5)
 ```
 
-The output is expected -- `5` was added to the end of `v`. What might not be expected is the underlying `v` is changed without assignment. (Actually `mutated`, the underlying container assigned to the symbol `v` is extended, not replaced.)
+The output is expected---`5` was added to the end of `v`. What might not be expected is the underlying `v` is changed without assignment. (Actually `mutated`, the underlying container assigned to the symbol `v` is extended, not replaced.)
 
 :::{.callout-note}
 ## Trailing exclamation point convention
@@ -699,7 +699,7 @@ end
 tot
 ```
 
-The `for` loop construct is central in many programming languages; in `Julia` for loops are very performant and very flexible, however, they are more verbose than needed. (In the above example we had to initialize an accumulator and then write three lines for the loop, whereas `sum(v)` would do the same--and in this case more flexibly, with just a single call.) Alternatives are usually leveraged--we mention a few.
+The `for` loop construct is central in many programming languages; in `Julia` for loops are very performant and very flexible, however, they are more verbose than needed. (In the above example we had to initialize an accumulator and then write three lines for the loop, whereas `sum(v)` would do the same---and in this case more flexibly, with just a single call.) Alternatives are usually leveraged---we mention a few.
 
 Iterating over a vector can be done by *value*, as above, or by *index*.  For the latter the `eachindex` method creates an iterable for the indices of the container. For rectangular objects, like matrices, there are also many uses for `eachrow` and `eachcol`, though not in these notes.
 
@@ -847,7 +847,7 @@ The `map` function can also be used in combination with `reduce`, a reduction. R
 sum(map(sin, xs))
 ```
 
-This has a performance drawback--there are two passes through the container, one to apply `sin` another to add.
+This has a performance drawback---there are two passes through the container, one to apply `sin` another to add.
 
 The `mapreduce` function combines the map and reduce operations in one pass. It takes a third argument to reduce by in the second position. This is a *binary* operator. So this combination will map `sin` over `xs` and then add the results up:
 
@@ -924,7 +924,7 @@ The latter using *splatting* to iterate over each value in `xs` and pass it to `
 
 ### Predicate functions
 
-A few reductions work with *predicate* functions--those that return `true` or `false`. Let's use `iseven` as an example, which tests if a number is even.
+A few reductions work with *predicate* functions---those that return `true` or `false`. Let's use `iseven` as an example, which tests if a number is even.
 
 We can check if *all* the alements of a container are even or if *any* of the elements of a container are even with `all` and `even`:
 
