--- a/quarto/derivatives/mean_value_theorem.qmd
+++ b/quarto/derivatives/mean_value_theorem.qmd
@@ -1,4 +1,4 @@
-# The mean value theorem for differentiable functions.
+# The mean value theorem for differentiable functions
 
 
 {{< include ../_common_code.qmd >}}
