--- a/quarto/differentiable_vector_calculus/polar_coordinates.qmd
+++ b/quarto/differentiable_vector_calculus/polar_coordinates.qmd
@@ -1,4 +1,4 @@
-# Polar Coordinates and Curves
+# Polar coordinates and curves
 
 
 {{< include ../_common_code.qmd >}}
@@ -226,7 +226,7 @@ The folium has radial part $0$ when $\cos(\theta) = 0$ or $\sin(2\theta) = b/4a$
 plot_polar(𝒂0..(pi/2-𝒂0), 𝒓)
 ```
 
-The second - which is too small to appear in the initial plot without zooming in - with
+The second---which is too small to appear in the initial plot without zooming in---with
 
 
 ```{julia}
