--- a/quarto/integral_vector_calculus/review.qmd
+++ b/quarto/integral_vector_calculus/review.qmd
@@ -1,4 +1,4 @@
-# Quick Review of Vector Calculus
+# Quick review of vector calculus
 
 
 {{< include ../_common_code.qmd >}}
@@ -133,7 +133,7 @@ $$
 $$
 
 
-The generalization to $n>2$ is clear - the partial derivative in $x_i$ is the derivative of $f$ when the *other* $x_j$ are held constant.
+The generalization to $n>2$ is clear---the partial derivative in $x_i$ is the derivative of $f$ when the *other* $x_j$ are held constant.
 
 
 This may be viewed as the derivative of the univariate function $(f\circ\vec{r})(t)$ where $\vec{r}(t) = p + t \hat{e}_i$, $\hat{e}_i$ being the unit vector of all $0$s except a $1$ in the $i$th component.
