--- a/quarto/integrals/arc_length.qmd
+++ b/quarto/integrals/arc_length.qmd
@@ -557,7 +557,7 @@ Following (faithfully) [Kantorwitz and Neumann](https://www.researchgate.net/pub
 
 @fig-kantorwitz-neumann is clearly of a concave down function. The asymmetry about the critical point will be seen to be a result of the derivative also being concave down. This asymmetry will be characterized in several different ways in the following including showing that the arc length from $(a,0)$ to $(c,f(c))$ is longer than from $(c,f(c))$ to $(b,0)$.
 
-::: {#@fig-kantorwitz-neumann}
+::: {#fig-kantorwitz-neumann}
 
 
 ```{julia}
