--- a/quarto/index.qmd
+++ b/quarto/index.qmd
@@ -77,7 +77,9 @@ These notes may be compiled into a `pdf` file through Quarto. As the result is r
 -->
 
 To *contribute* -- say by suggesting additional topics, correcting a
-mistake, or fixing a typo -- click the "Edit this page" link and join the list of [contributors](https://github.com/jverzani/CalculusWithJuliaNotes.jl/graphs/contributors). Thanks to all contributors and a *very* special thanks to `@fangliu-tju` for their careful and most-appreciated proofreading.
+mistake, or fixing a typo -- click the "Edit this page" link and join the list of [contributors](https://github.com/jverzani/CalculusWithJuliaNotes.jl/graphs/contributors). Thanks to all contributors.
+
+A *very* special thanks goes out to `@fangliu-tju` for their careful and most-appreciated proofreading and error spotting spread over a series of PRs.
 
 ## Running Julia
 
