--- a/quarto/limits/limits.qmd
+++ b/quarto/limits/limits.qmd
@@ -689,7 +689,7 @@ c = 15/11
 lim(h, c; n = 16)
 ```
 
-(Though the graph and table do hint at something a bit odd -- the graph shows a blip, the table doesn't show values in the second column going towards a specific value.)
+(Though the graph and table do hint at something a bit odd---the graph shows a blip, the table doesn't show values in the second column going towards a specific value.)
 
 
 However the limit in this case is $-\infty$ (or DNE), as there is an aysmptote at $c=15/11$. The problem is the asymptote due to the logarithm is extremely narrow and happens between floating point values to the left and right of $15/11$.
